tests/errors/module-glob-private.ari
mod Secret {
  fn hidden() -> i64 {
    return 1;
  }
}

use Secret::*

fn main() -> i64 {
  return hidden();
}
